<resources>
    <string name="app_name">Ingisang</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">비밀번호6자리 이상 넣어주세요</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">이메일 변경</string>
    <string name="change_password">비밀번호 번경</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">새 비밀번호</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">회원가입</string>
    <string name="btn_link_to_login">로그인</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">비밀번호 찾기</string>
    <string name="btn_reset_password">비밀번호 재설정</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password"></string>
    <string name="forgot_password_msg">이메일을 입력해 주세요</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
